--- a/pong/pong.kv
+++ b/pong/pong.kv
@@ -1,5 +1,12 @@
 #:kivy 1.0.9
 
+<PongPaddle>:
+    size: 25, 200
+    canvas:
+        Rectangle:
+            pos:self.pos
+            size:self.size
+            
 <PongBall>:
     size: 50, 50 
     canvas:
@@ -9,6 +16,8 @@
             
 <PongGame>: 
     ball: pong_ball
+    player1: player_left
+    player2: player_right
     
     canvas:
         Rectangle:
@@ -19,13 +28,23 @@
         font_size: 70  
         center_x: root.width / 4
         top: root.top - 50
-        text: "0"
+        text: str(root.player1.score)
         
     Label:
         font_size: 70  
         center_x: root.width * 3 / 4
         top: root.top - 50
-        text: "0"
+        text: str(root.player2.score)
+        
+    PongPaddle:
+        id: player_left
+        x: root.x
+        center_y: root.center_y
+        
+    PongPaddle:
+        id: player_right
+        x: root.width-self.width
+        center_y: root.center_y
         
     PongBall:
         id: pong_ball
